--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
 <script type="module">
-    import { foo } from './src/foobar.js'
-    alert(foo());
+    // import { Reader } from './src/binary-chunk.js'
 </script>
